[gd_scene load_steps=9 format=3 uid="uid://bgwwpcx6dn0ls"]

[ext_resource type="Script" uid="uid://bquo3dctosq0b" path="res://Scenes/Animal/Animal.gd" id="1_x85cc"]
[ext_resource type="Texture2D" uid="uid://o3pd60qkqyj3" path="res://Assets/player/parrot.png" id="2_5swx0"]
[ext_resource type="Texture2D" uid="uid://eq2enxkjcsqp" path="res://Assets/items/arrow.png" id="3_fsxl2"]
[ext_resource type="AudioStream" uid="uid://c5nxd2hjfk71a" path="res://Assets/audio/stretch2.ogg" id="4_dl82p"]
[ext_resource type="AudioStream" uid="uid://casog2k24eelr" path="res://Assets/audio/catapult.ogg" id="5_pf3qi"]
[ext_resource type="AudioStream" uid="uid://b5vakf4dbhq0q" path="res://Assets/audio/kick_wood.ogg" id="6_756cb"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_x85cc"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_englr"]
radius = 19.026299

[node name="Animal" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_x85cc")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_x85cc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_5swx0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_englr")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -33.0
offset_top = -113.0
offset_right = 7.0
offset_bottom = -64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "000
000"

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_fsxl2")
offset = Vector2(150, 0)

[node name="StrechSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dl82p")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_pf3qi")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_756cb")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-14, -73)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
